src/ApiGateway/envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            name: rotten_bananas_route
            virtual_hosts:
            - name: rotten_bananas_backend
              domains:
              - "*"
              routes:
              - name: "movie-api"
                match:
                  prefix: "/api/m/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: movie-service
              - name: "rating-api"
                match:
                  prefix: "/api/r/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: rating-service
              - name: "user-api"
                match:
                  prefix: "/api/u/"
                route:
                  auto_host_rewrite: true
                  prefix_rewrite: "/api/"
                  cluster: user-manager-service
              - name: "web-spa"
                match:
                  prefix: "/"
                route:
                  auto_host_rewrite: true
                  cluster: web-spa-service
          http_filters:
          - name: envoy.filters.http.router
  clusters:
  - name: movie-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: movie-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: movie-service
                port_value: 80
  - name: rating-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: rating-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: rating-service
                port_value: 80
  - name: user-manager-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: user-manager-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: user-manager-service
                port_value: 80
  - name: web-spa-service
    connect_timeout: 0.25s
    type: strict_dns
    lb_policy: round_robin
    load_assignment:
      cluster_name: web-spa-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: web-spa-service
                port_value: 80
